--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -15,13 +15,18 @@ pre {
   padding: 10px;
   font-size: 11px; }
 
-a {
-  color: #000;
-  &:visited {
-    color: #666; }
-  &:hover {
-    color: #fff;
-    background-color: #000; } }
+  .affix {
+    position: fixed; 
+}
+
+
+// a {
+//   color: #000;
+//   &:visited {
+//     color: #666; }
+//   &:hover {
+//     color: #fff;
+//     background-color: #000; } }
 
 div {
   &.field, &.actions {
