--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -75,7 +75,7 @@
 	     	<div class="span2">
 	            <!-- <h2>Left Nav</h2> -->
 	            <ul class="nav nav-list" data-spy="affix">
-	                <li class="dimensionSelector" id="li-diameter"><a href="#diameter">Diameter</a></li>
+	                <li class="dimensionSelector active" id="li-diameter"><a href="#diameter">Diameter</a></li>
 		            <li class="dimensionSelector" id="li-surface_area"><a href="#surface_area">Surface Area</a></li>
 		            <li class="dimensionSelector" id="li-length"><a href="#length">Length</a></li>
 		            <li class="dimensionSelector" id="li-width"><a href="#width">Width</a></li>
@@ -91,6 +91,8 @@
 
 	        <div class="span2">
 	          <div class="sidenav" data-spy="affix">
+	          	<a href="#" id="Scale">Scaling Mode</a>
+	          	<br /><br />
 	          	<a href="#" id="Analogy">Analogy Mode</a>
 	          	<br /><br />
 	            <a href="#" id="Prediction">Prediction Mode</a>
