--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,7 +23,8 @@
           </div> -->
         </div>
       </div>
-      <div id="animateObjects" class="span10">
+
+      <div id="animateObjects" class="span8">
         <div>
           <div id="leftObject" class="objectAnimation left">
           </div>
@@ -34,8 +35,22 @@
           <%= image_tag "arrows-double-reversed.svg", :id=>"reverseDescription",  :width=>"50" %>
           <p id="verboseDescription"></p>
         </div>
-    <footer>
-      <!-- <p>&copy; Company 2012</p> -->
-    </footer>
+      </div>
 
-  </div>
+      <div id="analogyObjects" class="span8">
+        <div>
+          <div id="analogyleftObject" class="left">
+          </div>
+          <div id="analogyrightObject" class="right">
+          </div>
+        </div>
+      </div>
+
+      <div id="predictionObjects" class="span8">
+        <div>
+          <div id="predictionleftObject" class="left">
+          </div>
+          <div id="predictionrightObject" class="right">
+          </div>
+        </div>
+      </div>
