--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,8 +12,8 @@
  *= require_tree .
 */
 
-/*@import "compass_twitter_bootstrap_awesome";
-@import "compass_twitter_bootstrap_responsive";*/
+@import "compass_twitter_bootstrap_awesome";
+@import "compass_twitter_bootstrap_responsive";
 
 table {
 	border-spacing: 10px;
